--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
             padding: 30px;
             background-image: linear-gradient(to bottom, #373d99, #7e6ce2);
         }
+        #meuVideo {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     </style>
 </head>
 <body>
