--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
     </style>
 </head>
 <body>
+    <div class="header">
+   <link rel="icon" href="./images/naafiri-Icon.webp">
+    </div>
     <div class="container">
         <h1>Guia Naafiri</h1>
         <p class="titulo1">Vantagens</p>
