--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 </head>
 <body>
     <div class="header">
-   <link rel="icon" href="./images/naafiri-Icon.webp">
-    </div>
+    <img <link>src</link>="https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2F2lgvvvv0fezb1.png%3Fwidth%3D1024%26format%3Dpng%26auto%3Dwebp%26s%3D0c47da7a1b03a7923ce1049bbbc80c44782a1467" alt="Nova Logo da Empresa">
+</div>
     <div class="container">
         <h1>Guia Naafiri</h1>
         <p class="titulo1">Vantagens</p>
