--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="./images/favicon.png">
+    <link rel="icon" href="images/favicon.png">
     <title>Guia Naafiri</title>
     <style>
         body {
