--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="https://drive.google.com/file/d/1qBi6zRynHdTUkmvhJX7h3joA_5ULauKW/view?usp=drive_link">
+    <link rel="icon" href="favicon.png">
     <title>Guia Naafiri</title>
     <style>
         body {
