--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p class="titulo4">Late Game(25+ Minutos)</p>
         <p class="paragrafo3">No final do jogo, flanqueie o inimigo e mantenha-se próximo aos seus companheiros de equipe. Você deve procurar se juntar a eles em lutas de equipe no final do jogo. Continue procurando pegar o suporte inimigo quando ele for wardar sozinho no final do jogo. Isso é especialmente verdadeiro quando os objetivos estão prestes a surgir. Concentre-se nas lutas em equipe com seus aliados e evite se separar demais, caso contrário, podem ser cercados e você perderá a luta.</p>
         <p class="paragrafo3">No nível 16, você colocará o terceiro e último ponto em seu Ultimate. Você estará bastante forte, e seu potencial total de combate será elevado. No final do jogo, você começará a perder um pouco de eficácia, pois as equipes estarão agrupadas, então é necessário jogar em conjunto com a sua equipe. O agrupamento inimigo reduzirá suas chances de obter eliminações. Naturalmente, você terá muitos itens concluídos ou estará com seu conjunto completo de itens nesta fase do jogo, então deverá ser capaz de causar muito dano e sobreviver nas lutas.</p>
-        <<iframe width="960" height="540" src="https://www.youtube.com/watch?v=cPMgK1d4f3Y" frameborder="0" allowfullscreen></iframe>
+        <<iframe width="960" height="540" src="https://drive.google.com/file/d/12rFDG2msf9-YeV6VEBfdMTqQj7wYIhgQ/view?usp=drive_link" frameborder="0" allowfullscreen></iframe>
     </div>
 </body>
 </html>
