--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         h1 {
             color: rgb(98, 255, 151);
             font-size: 60px;
-            text-align: center;
+            text-align: contain;
         }
         .titulo1 { 
             font-size: 40px;
