--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             background-color: #ffffff;
             font-family: Arial, sans-serif;
             background-image: url('https://images.alphacoders.com/131/1319573.jpeg');
-            background-size: co;
+            background-size: contain;
             font-family: Arial, sans-serif;
         }
         
         h1 {
             color: rgb(98, 255, 151);
             font-size: 60px;
-            text-align: contain;
+            text-align: center;
         }
         .titulo1 { 
             font-size: 40px;
