--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <div class="container">
         <h1>Guia Naafiri</h1>
         <p class="titulo1">Vantagens</p>
-        <p class="paragrafo1">Naafiri é realmente habilidosa em executar e abater campeões mais frágeis que estão se movendo sozinhos no mapa. Você é um campeão muito móvel, o que permite que você participe ou escape de situações complicadas. Naafari é uma campeã que depende bastante de neve acumulada. Conseguir uma eliminação precoce pode capacitá-la a dominar o mapa.</p>
+        <p class="paragrafo1">Naafiri é realmente habilidosa em executar e abater campeões mais frágeis que estão se movendo sozinhos no mapa. Você é um campeão muito móvel, o que permite que você participe ou escape de situações complicadas. Naafari é uma campeã que depende bastante de snowball. Conseguir uma eliminação precoce pode capacitá-la a dominar o mapa.</p>
         <p class="titulo2">Desvantagens</p>
-        <p class="paragrafo2">Conforme sugerido, ela é uma campeã que depende bastante de neve acumulada, então, se você não obtiver uma vantagem inicial, será difícil carregar mais tarde. Ela enfrenta dificuldades contra equipes inteligentes que se agrupam. Isso torna mais arriscado entrar sozinho, sendo necessário que seus aliados o acompanhem. Ela pode ser facilmente evitada após avançar. Pode ser complicado lidar com campeões que possuem dashes ou ferramentas de escape.</p>
+        <p class="paragrafo2">Conforme sugerido, ela é uma campeã que depende bastante de snowball, então, se você não obtiver uma vantagem inicial, será difícil carregar mais tarde. Ela enfrenta dificuldades contra equipes inteligentes que se agrupam. Isso torna mais arriscado entrar sozinho, sendo necessário que seus aliados o acompanhem. Ela pode ser facilmente evitada após avançar. Pode ser complicado lidar com campeões que possuem dashes ou ferramentas de escape.</p>
         <p class="titulo5">Estratégia de Jogo</p>
         <p class="titulo4">Fase de Rotas(0 - 15 Min):</p>
         <p class="paragrafo3">Comece a procurar emboscadas depois de empurrar a onda. Você pode começar a se movimentar pelo mapa após atingir o nível 6. Jogue em torno do seu ultimate e busque eliminações sempre que estiver disponível. Não se esqueça de manter um bom controle de objetivos! Ganke a rota inferior e depois faça rotação para o Dragão.</p>
