--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
         <article id="video">
             <iframe width="960" height="540" src="https://www.youtube.com/watch?v=cPMgK1d4f3Y&t=10s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </article>
+        <p class="titulo5">Runas</p>
+        <p class="titulo4">Contra Ranged</p>
+        <img src="runevsranged.png" alt="runaranged">
+        <p class="titulo4">Contra Melee</p>
+        <img src="runevsmelee.png" alt="runamelee">
+    </div>
     </div>
 </body>
 </html>
