--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </article>
         <p class="titulo5">Runas</p>
         <p class="titulo4">Contra Ranged</p>
-        <img src="runevsranged.png" alt="runaranged">
+        <img src="https://drive.google.com/file/d/12GRWdcmW81BgU22PwZS4phb5n60RT3pl/view?usp=drive_link" alt="runaranged">
         <p class="titulo4">Contra Melee</p>
         <img src="runevsmelee.png" alt="runamelee">
     </div>
