--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </article>
         <p class="titulo5">Runas</p>
         <p class="titulo4">Contra Ranged</p>
-        <img src="https://drive.google.com/file/d/12GRWdcmW81BgU22PwZS4phb5n60RT3pl/view?usp=drive_link" alt="runaranged">
+        <img src="images/runevsranged.png" alt="runaranged">
         <p class="titulo4">Contra Melee</p>
-        <img src="https://drive.google.com/file/d/1nMq0ey0RZQ-QqBk7xmXgfePFMsSJ7Gdo/view?usp=drive_link" alt="runamelee">
+        <img src="images/runevsmelee.png" alt="runamelee">
     </div>
     </div>
 </body>
