--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </article>
         <p class="titulo5">Runas</p>
         <p class="titulo4">Contra Ranged</p>
-        <img src="images/runevsranged.png" alt="runaranged">
+        <img src="images/runevsranged.png" alt="runaranged" width="50" height="50">
         <p class="titulo4">Contra Melee</p>
-        <img src="images/runevsmelee.png" alt="runamelee">
+        <img src="images/runevsmelee.png" alt="runamelee" width="50" height="50">
     </div>
     </div>
 </body>
