--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         <img src="images/runevsranged.png" alt="runaranged" width="960" height="540">
         <p class="titulo4">Contra Melee</p>
         <img src="images/runevsmelee.png" alt="runamelee" width="960" height="540">
+        <p class="titulo5">Build</p>
+        <p class="titulo4">Build Ofensiva</p>
+        <img src="C:\Users\Dogec\Documents\Guia-Naafiri\imagesrunevsranged.png" alt="buildofensiva" width="800" height="600">
+        <p class="titulo4">Build Defensiva</p>
+        <img src="C:\Users\Dogec\Documents\Guia-Naafiri\imagesrunevsranged.png" alt="builddefensiva" width="615" height="533">
     </div>
     </div>
 </body>
