--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <img src="images/runevsmelee.png" alt="runamelee" width="960" height="540">
         <p class="titulo5">Build</p>
         <p class="titulo4">Build Ofensiva</p>
-        <img src="images/builddefensivo.png" alt="buildofensiva" width="800" height="600">
+        <img src="images/buildofensivo.png" alt="buildofensiva" width="800" height="600">
         <p class="titulo4">Build Defensiva</p>
-        <img src="images/buildofensivo.png" alt="builddefensiva" width=" 799" height="597">
+        <img src="images/builddefensivo.png" alt="builddefensiva" width=" 799" height="597">
     </div>
     </div>
 </body>
