--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         <img src="images/buildofensivo.png" alt="buildofensiva" width="800" height="600">
         <p class="titulo4">Build Defensiva</p>
         <img src="images/builddefensivo.png" alt="builddefensiva" width=" 799" height="597">
+        <p class="titulo4">Ordem das Habilidades</p>
+        <img src="images/ordemdashabilidades.png" alt="ordemdashabilidades" width="800" height="418">
     </div>
     </div>
 </body>
