--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         <p class="titulo4">Contra Melee</p>
         <img src="images/runevsmelee.png" alt="runamelee" width="960" height="540">
         <p class="titulo5">Build</p>
+        <p class="titulo4">Itens Iniciais</p>
+        <img src="images/itensiniciais.png" alt="itensiniciais" width="798" height="602">
         <p class="titulo4">Build Ofensiva</p>
         <img src="images/buildofensivo.png" alt="buildofensiva" width="800" height="600">
         <p class="titulo4">Build Defensiva</p>
