--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         <img src="images/builddefensivo.png" alt="builddefensiva" width=" 799" height="597">
         <p class="titulo4">Ordem das Habilidades</p>
         <img src="images/ordemdashabilidades.png" alt="ordemdashabilidades" width="800" height="418">
+        <p class="titulo5">Spells</p>
+        <p class="titulo4">Melhores Spells</p>
+        <img src="images/spells.png" alt="spells" width="800" height="250">
     </div>
     </div>
 </body>
