--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <p class="titulo4">Itens Iniciais</p>
         <img src="images/itensiniciais.png" alt="itensiniciais" width="798" height="602">
         <p class="titulo4">Botas</p>
-        <img src="images/itensiniciais.png" alt="itensiniciais" width="798" height="602">
+        <img src="images/botas.png" alt="botas" width="798" height="602">
         <p class="titulo4">Build Ofensiva</p>
         <img src="images/buildofensivo.png" alt="buildofensiva" width="800" height="600">
         <p class="titulo4">Build Defensiva</p>
