--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Naafiri Fera das Cem Mordidas</h1>
+        <h1>Naafiri A Fera das Cem Mordidas</h1>
         <p class="titulo1">Vantagens</p>
         <p class="paragrafo1">Naafiri é realmente habilidosa em executar e abater campeões mais frágeis que estão se movendo sozinhos no mapa. Você é um campeão muito móvel, o que permite que você participe ou escape de situações complicadas. Naafari é uma campeã que depende bastante de snowball. Conseguir uma eliminação precoce pode capacitá-la a dominar o mapa.</p>
         <p class="titulo2">Desvantagens</p>
