--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p class="titulo4">Itens Iniciais</p>
         <img class="imagecenter" src="images/itensiniciais.png" alt="itensiniciais" width="798" height="602">
         <p class="titulo4">Botas</p>
-        <img class="imagecenter" src="images/itensiniciais.png" alt="itensiniciais" width="798" height="602">
+        <img class="imagecenter" src="images/botas.png" alt="itensiniciais" width="798" height="602">
         <p class="titulo4">Build Ofensiva</p>
         <img class="imagecenter" src="images/buildofensivo.png" alt="buildofensiva" width="800" height="600">
         <p class="titulo4">Build Defensiva</p>
